# SupperCOM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SupperCOM_zh_CN.ts  mainwindow.ui  recvthread.cpp  recvthread.h  sendthread.cpp  sendthread.h
SerialPortDbg/: SerialPortDbg.pro  main.cpp  mainwidget.cpp  mainwidget.h  mainwidget.ui  recvthread.cpp  recvthread.h  sendthread.cpp  sendthread.h
src/: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  recvthread.cpp  recvthread.h  sendthread.cpp  sendthread.h  serial_port.cpp  serial_port.h
